package p2pd.pb;

message Request {
  enum Type {
    IDENTIFY       = 0;
    CONNECT        = 1;
    STREAM_OPEN    = 2;
    STREAM_HANDLER = 3;
  }

  required Type type = 1;

  optional ConnectRequest connect = 2;
  optional StreamOpenRequest streamOpen = 3;
  optional StreamHandlerRequest streamHandler = 4;
}

message Response {
  enum Type {
    OK    = 0;
    ERROR = 1;
  }

  required Type type = 1;
  optional ErrorResponse error = 2;
  optional IdentifyResponse identify = 3;
  optional StreamInfo streamInfo = 4;
}

message IdentifyResponse {
  required bytes id = 1;
  repeated bytes addrs = 2;
}

message ConnectRequest {
  required bytes peer = 1;
  repeated bytes addrs = 2;
}

message StreamOpenRequest {
  required bytes peer = 1;
  repeated string proto = 2;
}

message StreamHandlerRequest {
  required string path = 1;
  repeated string proto = 2;
}

message ErrorResponse {
  required string msg = 1;
}

message StreamInfo {
  required bytes peer = 1;
  required bytes addr = 2;
  required string proto = 3;
}
